--- a/index.html
+++ b/index.html
@@ -599,8 +599,8 @@
               <tr>
                 <td width="30" align="center">2</td>
                 <td width="230">Бєлашов Альберт  </td>
-                <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-                <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+                <td><a href="https://arhias.github.io" target="_blank">https://arhias.github.io/</a></td>
+                <td><a href="https://github.com/arhias" target="_blank">https://github.com/arhias</a></td>
                 <td><a href="http://arhias.lovestoblog.com/" target="_blank">http://arhias.lovestoblog.com/</a></td>
                 <td align="center">0</td>
               </tr>    
@@ -615,8 +615,8 @@
               <tr>
                 <td width="30" align="center">4</td>
                 <td width="230">Вознюк Валерія  </td>
-                <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-                <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+                <td><a href="https://sweuccc.github.io" target="_blank">https://sweuccc.github.io/</a></td>
+                <td><a href="https://github.com/sweuccc" target="_blank">https://github.com/sweuccc</a></td>
                 <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
                 <td align="center">0</td>
               </tr>    
@@ -631,24 +631,24 @@
               <tr>
                 <td width="30" align="center">6</td>
                 <td width="230">Кийко Аліна </td>
-                <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-                <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+                <td><a href="https://alinakyiko.github.io" target="_blank">https://alinakyiko.github.io/</a></td>
+                <td><a href="https://github.com/alinakyiko" target="_blank">https://github.com/alinakyiko</a></td>
                 <td><a href="http://alinakyiko.lovestoblog.com/" target="_blank">http://alinakyiko.lovestoblog.com/</a></td>
                 <td align="center">0</td>
               </tr>    
               <tr>
                 <td width="30" align="center">7</td>
                 <td width="230">Мартинчук Віталій  </td>
-                <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-                <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+                <td><a href="https://vitaliimartynchuk.github.io" target="_blank">https://vitaliimartynchuk.github.io/</a></td>
+                <td><a href="https://github.com/vitaliimartynchuk" target="_blank">https://github.com/vitaliimartynchuk</a></td>
                 <td><a href="http://vitalii.lovestoblog.com/" target="_blank">http://vitalii.lovestoblog.com/</a></td>
                 <td align="center">0</td>
               </tr>    
               <tr>
                 <td width="30" align="center">8</td>
                 <td width="230">Півень Марія </td>
-                <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-                <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+                <td><a href="https://mariapiven.github.io" target="_blank">https://mariapiven.github.io/</a></td>
+                <td><a href="https://github.com/mariapiven" target="_blank">https://github.com/mariapiven</a></td>
                 <td><a href="http://pivenmaria.lovestoblog.com/" target="_blank">http://pivenmaria.lovestoblog.com/</a></td>
                 <td align="center">0</td>
               </tr>    
@@ -663,8 +663,8 @@
               <tr>
                 <td width="30" align="center">10</td>
                 <td width="230">Россінська Дарія  </td>
-                <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-                <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+                <td><a href="https://allforreyna.github.io" target="_blank">https://allforreyna.github.io/</a></td>
+                <td><a href="https://github.com/allforreyna" target="_blank">https://github.com/allforreyna</a></td>
                 <td><a href="http://dashaross.lovestoblog.com/" target="_blank">http://dashaross.lovestoblog.com/</a></td>
                 <td align="center">0</td>
               </tr>    
